--- a/style.css
+++ b/style.css
@@ -207,10 +207,12 @@ h1 {
     font-family: 'Abril Fatface', sans-serif;
     margin: 0 60px;
     padding-top: 120px;
+    text-shadow: 2px 0 0 #fff, 2px 2px 0 #fff, 0 2px 0 #fff, -2px 2px 0 #fff, -2px 0 0 #fff, -2px -2px 0 #fff, 0 -2px 0 #fff, 2px -2px 0 #fff;
 }
 .txt-animation {
     font-size: 30px;
     margin: 10px 0 10px 60px;
+    text-shadow: 1px 0 0 #fff, 1px 1px 0 #fff, 0 1px 0 #fff, -1px 1px 0 #fff, -1px 0 0 #fff, -1px -1px 0 #fff, 0 -1px 0 #fff, 1px -1px 0 #fff;
 }
 .btn-acc {
     display: inline-flex;
@@ -292,7 +294,6 @@ h1 {
 }
 @media screen and (max-width: 1000px) {
     .accueil {
-        height: 150vh;
         background-position: bottom left;
     }
     h1 {
@@ -312,11 +313,16 @@ h1 {
     .btn-rond {
         display: none;
     }
+    .txt-animation {
+        font-size: 25px!important;
+    }
+    .btn-acc{
+        width: 25%
+    }
 }
 
 @media screen and (max-width: 700px) {
     .accueil {
-        height: 150vh;
         background-position: bottom center;
     }
     h1 {
@@ -330,11 +336,13 @@ h1 {
         width: 60px;
         height: 60px;
     }
+    .btn-acc{
+        width: 30%
+    }
 }
 
 @media screen and (max-width: 500px) {
     .accueil{
-        height: 150vh;
         background-position: center;
     }
 
@@ -360,7 +368,9 @@ h1 {
     .icone-medias {
         width: 20px;
     }
-
+    .txt-animation {
+        font-size: 18px!important;
+    }
 }
 
 @media screen and (max-width: 450px) {
@@ -407,11 +417,14 @@ h1 {
     .icone-medias {
         width: 20px;
     }
+    .txt-animation {
+        font-size: 15px!important;
+    }
 }
 
 @media screen and (max-width: 380px) {
     .txt-animation {
-        font-size: 15px!important;
+        font-size: 13px!important;
     }
 }
 @media screen and (max-width: 370px) {
@@ -420,6 +433,14 @@ h1 {
     }
     .accueil{
         background-position: top center;
+    }
+}
+@media screen and (max-width: 325px){
+    .btn-acc{
+        width: 30%
+    }
+    .txt-animation {
+        font-size: 12px!important;
     }
 }
 
@@ -463,8 +484,9 @@ h1 {
     width: 600px;
     flex-shrink: 0;
     margin-bottom: 50px;
-    padding-left: 90px;
+    padding-left: 75px;
     padding-top: 20px;
+    margin-left: 30px;
 }
 .pres-gauche h3 {
     text-align: center;
@@ -476,20 +498,17 @@ h1 {
     width: 60px;
     margin: 0 auto 20px auto;
 }
-.pres-gauche p {
-    text-align: justify;
-}
 
 .pres-droite {
     width: 600px;
     flex-shrink: 0;
     display: flex;
     justify-content: flex-start;
-    margin-bottom: 50px
+    margin-bottom: 50px;
 }
 .liste-presentation {
     list-style-type: none;
-    padding: 10px 0 50px 110px;
+    padding: 10px 10px 50px 80px;
 }
 .chiffre-style {
     font-family: 'Abril Fatface', sans-serif;
@@ -510,7 +529,9 @@ h1 {
     .titre-pres {
         padding-left: 0px;
     }
-
+    .pres-gauche{
+        margin-left: 0;
+    }
 }
 
 @media screen and (max-width: 1100px) {
@@ -826,9 +847,9 @@ h1 {
 /*------------ Section experience travail --------- */
 .travail-exp {
     width: calc(100% - 300px);
-    height: auto;
     margin-left: auto;
     padding-bottom: 100px;
+    height: 700px;
 }
 
 .titre-travail-exp {
@@ -921,15 +942,22 @@ h1 {
 @media screen and (max-width: 1300px) {
     .travail-exp {
         width: 100%;
+        height: 1000px
+    }
+    .bloc{
+        height: 300px
+    }
+    .barre-verticale {
+        height: 700px;
     }
 }
 @media screen and (max-width: 950px) {
 
     .barre-verticale {
-        height: 600px;
+        height: 800px;
     }
     .bloc {
-        height: 300px;
+        height: 350px;
         margin-bottom: 37.5px;
     }
     .barre-verticale{
@@ -947,10 +975,13 @@ h1 {
         font-size: 16px;
     }
     .bloc {
-        height: 400px;
+        height: 500px;
     }
     .barre-verticale {
-        height: 1800px;
+        height: 1100px;
+    }
+    .travail-exp{
+        height: 1300px
     }
 
 }
@@ -960,7 +991,30 @@ h1 {
         .txt-section {
             font-size: 15px;
         }
+    .bloc {
+        height: 500px;
+    }
+    .txt-section{
+        font-size: 14px
+    }
+    .barre-verticale {
+        height: 1100px;
+    }
+}
 
+@media screen and (max-width: 310px){
+    .bloc {
+        height: 540px;
+    }
+    .travail-exp{
+        height: 1450px;
+    }
+    .txt-section{
+        font-size: 15px
+    }
+    .barre-verticale {
+        height: 1200px;
+    }
 }
 
 /* Section Parallax */
@@ -971,8 +1025,8 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 1px dashed #333;
-    border-bottom: 1px dashed #333;
+    border-top: 1px solid #333;
+    border-bottom: 1px solid #333;
 }
 .txt-par {
     font-size: 30px;
@@ -1017,125 +1071,88 @@ h1 {
 .section-contact {
     width: 100%; 
     height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    padding-left: 20%;
 }
 .section-contact h2 {
     text-align: center;
     color: #333;
     font-size: 48px;
     font-weight: 400;
-    margin-bottom: 50px;
-    padding: 70px 0 0 300px;
 }
 .section-contact h2 strong {
     font-weight: 900;
 }
 
-.container-form {
-    margin: 0 auto;
-    width: 70%;
-    padding-left: 300px;
-}
-.form-groupe {
-    position: relative;
-    display: flex;
-    margin-bottom: 45px;
-}
-.form-groupe label {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    color: #aaa;
-    font-size: 20px;
-    transition: 0.4s ease-out;
-}
-.form-groupe input {
-    display: block;
-    width: 100%;
-    padding: 10px 0px;
-    border: none;
-    outline: none;
-    background: none;
-    border-bottom: 3px solid #aaa;
-    color: #666;
-    font-size: 20px;
-    transition: 0.4s ease-out;
-}
-textarea {
-    width: 100%;
-    height: 200px;
-    border: none;
-    border: 3px solid #aaa;
-    border-radius: 3px;
-    padding: 5px;
-    resize: none;
-    outline: none;
-    font-size: 20px;
-    transition: 0.4s all ease-out;
-    background: #f1f1f1;
-}
-textarea::placeholder {
-    font-size: 20px;
-    opacity: 0.5;
-}
-textarea:focus {
-    border-color: #8b97d7;
-}
-
-.form-groupe:nth-child(4) {
-    margin-bottom: 25px;
-    justify-content: flex-start;
-}
-
-.form-groupe .button-sub {
-    display: block;
-    width: auto;
-    padding: 15px 60px;
-    border: 3px solid rgb(144,144,144);
-    border-radius: 999px;
-    background-image: linear-gradient(to right, transparent 50%, rgb(65,65,65) 50%, rgb(134,134,134));
-    background-size: 200%;
-    color: #333;
-    font-size: 24px;
-    font-weight: 500;
-    cursor: pointer;
-}
-.form-groupe .button-sub:hover {
-    color: #fff;
-    background-position: 100%;
-    border: 3px solid #fff;
-}
-@media screen and (max-width: 1300px) {
-    .section-contact h2 {
-        padding: 70px 0 0 0;
-    }
-    .container-form{
-        padding-left: 0;
-    }
-    .form-groupe:nth-child(4){
-        justify-content: center;
-    }
-}
-
-/* Animation Contact */
-
-.form-groupe:focus-within label,
-.form-groupe.animation label {
-    top: 0px;
-    transform: translateY(-100%);
-    color: #8b97d7;
-}
-
 /* Footer */
+.projet{
+    color: #ef5350;
+}
 
 footer {
     width: 100%;
     text-align: center;
-    padding-top: 100px;
-    padding-left: 300px;
+    padding-top: 20px;
+    padding-left: 20%;
+    padding-bottom: 7%;
+}
+i{
+    font-size: 3em;
+    margin-right: 15px;
+    margin-bottom: 6%;
+    margin-top: 3%
+}
+i:hover{
+    -webkit-animation: wiggle 0.1s infinite;
+}
+footer a{
+    color: black
 }
 @media screen and (max-width: 1300px) {
     footer {
         padding-left: 0px;
     }
+    .section-contact{
+        padding-left: 0px;
+    }
+}
+
+
+@-webkit-keyframes wiggle {
+  0% {
+    transform: translate(1px, 1px);
+  }
+  10% {
+    transform: translate(-1px, -1px);
+  }
+  20% {
+    transform: translate(1px, 1px);
+  }
+  30% {
+    transform: translate(-1px, -1px);
+  }
+  40% {
+    transform: translate(1px, 1px);
+  }
+  50% {
+    transform: translate(-1px, -1px);
+  }
+  60% {
+    transform: translate(1px, 1px);
+  }
+  70% {
+    transform: translate(-1px, -1px);
+  }
+  80% {
+    transform: translate(1px, 1px);
+  }
+  90% {
+    transform: translate(-1px, -1px);
+  }
+  100% {
+    transform: translate(1px, 1px);
+  }
 }
