--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ h1 {
 }
 @media screen and (max-width: 1000px) {
     .accueil {
-        background-position: bottom left;
+        background-position: bottom center;
     }
     h1 {
         font-size: 70px;
@@ -342,7 +342,7 @@ h1 {
 
 @media screen and (max-width: 500px) {
     .accueil{
-        background-position: center;
+        background-position: bottom center;
     }
 
     h1 {
@@ -393,7 +393,7 @@ h1 {
         height: 3px;
     }
     .accueil {
-        background-position: top center;
+        background-position: bottom center;
     }
     h1 {
         margin: 0 30px 0 5px;
@@ -430,7 +430,7 @@ h1 {
         font-size: 13px!important;
     }
     .accueil{
-        background-position: top center;
+        background-position: bottom center;
     }
 }
 @media screen and (max-width: 325px){
